--- a/package.json
+++ b/package.json
@@ -4,19 +4,29 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build":"TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack"
+    "build": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack",
+    "dev": "cross-env TS_NODE_PROJECT=\"tsconfig-for-webpack-config.json\" webpack-dev-server --inline --progress"
   },
   "dependencies": {
     "vue": "^2.5.21"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
+    "@types/html-webpack-plugin": "^3.2.0",
     "@types/node": "^10.12.15",
     "@types/webpack": "^4.4.21",
     "@types/webpack-dev-server": "^3.1.1",
+    "@types/webpack-merge": "^4.1.3",
+    "babel-loader": "^8.0.4",
+    "cache-loader": "^1.2.5",
+    "cross-env": "^5.2.0",
+    "html-webpack-plugin": "^3.2.0",
+    "ts-loader": "^5.3.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10"
+    "webpack-dev-server": "^3.1.10",
+    "webpack-merge": "^4.1.5"
   }
 }
