--- a/package.json
+++ b/package.json
@@ -18,14 +18,21 @@
     "@types/webpack": "^4.4.21",
     "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-merge": "^4.1.3",
+    "autoprefixer": "^9.4.3",
     "babel-loader": "^8.0.4",
     "cache-loader": "^1.2.5",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.0.2",
     "html-webpack-plugin": "^3.2.0",
+    "less": "^3.9.0",
+    "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "postcss-loader": "^3.0.0",
+    "style-loader": "^0.23.1",
     "ts-loader": "^5.3.1",
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2",
+    "vue-loader": "^15.4.2",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
