--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
+    "@types/friendly-errors-webpack-plugin": "^0.1.1",
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.15",
@@ -23,6 +24,7 @@
     "cache-loader": "^1.2.5",
     "cross-env": "^5.2.0",
     "css-loader": "^2.0.2",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
@@ -33,6 +35,8 @@
     "ts-node": "^7.0.1",
     "typescript": "^3.2.2",
     "vue-loader": "^15.4.2",
+    "vue-template-compiler": "^2.5.21",
+    "vue-template-loader": "^1.0.0",
     "webpack": "^4.27.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.10",
