--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/html-webpack-plugin": "^3.2.0",
     "@types/mini-css-extract-plugin": "^0.2.0",
     "@types/node": "^10.12.15",
+    "@types/opn": "^5.1.0",
     "@types/webpack": "^4.4.21",
     "@types/webpack-dev-server": "^3.1.1",
     "@types/webpack-merge": "^4.1.3",
@@ -29,6 +30,7 @@
     "less": "^3.9.0",
     "less-loader": "^4.1.0",
     "mini-css-extract-plugin": "^0.5.0",
+    "opn": "^5.4.0",
     "postcss-loader": "^3.0.0",
     "style-loader": "^0.23.1",
     "ts-loader": "^5.3.1",
